Fix: Increase padding for SignInOptions on mobile
Fixes the issue where the SignInOptions content was being cut off on mobile devices.

--- a/frontend/srcs/components/AuthComponents/SignInOptions/SignInOptions.css
+++ b/frontend/srcs/components/AuthComponents/SignInOptions/SignInOptions.css
@@ -41,15 +41,15 @@
 }
 
 .SignInOptions {
-  margin-top: 20px;
 
-  padding: 40px 0px 30px 50px;
+
+  padding: 40px 40px 30px 50px !important;
   background-color: rgb(0, 0, 0);
   border: 0.5px solid #ffffff;
-
+/* 
   max-width: 460px;
   max-height: 512px;
-  overflow: hidden;
+  overflow: hidden; */
 }
 
 @layer Title {
@@ -292,6 +292,7 @@
 @media (max-width: 640px) {
   .SignInOptions {
     padding-left: 10px;
+
     margin-top: 100px;
   }
   .title,
